--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ a:hover, a:active { text-decoration: none; color:black }
 /* !!!!!!!!!!!!! HEADER !!!!!!!!!!!! */
 /* !!!!!!!!!!!!! MENU !!!!!!!!!!!! */
 #menu{
-
     position:sticky;
     top:0%;
     padding:10px;
@@ -49,6 +48,9 @@ a:hover, a:active { text-decoration: none; color:black }
 #menu ul li{
     padding-right:20px;
 }
+
+
+
 #bouton{
     background-color:#dd5a72;
     text-align:center;
@@ -63,7 +65,10 @@ a:hover, a:active { text-decoration: none; color:black }
     color:#FFFFFF;
     transition: all 0.2s;
     align-self:end;
+    
 }
+
+
 #bouton:hover{
     color:#000000;
     background-color:#e9ebfa;
@@ -121,9 +126,9 @@ nav{
     background-color:#5a72dd;
 }
 nav h2{
-    padding-top:0.7%;
+    padding :2%;
 }
-nav ul{
+#largemenu{
     display:flex;
     flex-direction:row;
     list-style:none;
@@ -132,10 +137,33 @@ nav ul{
     padding-top:1%;
     padding-bottom:1%;
     font-size:1rem;
+    position:absolute;
+    top:5%;
+    left:50%;
+    transform: translate(-50%,50%);
+    z-index:100;
 }
-nav ul li{
-    padding-right:20px;
+#largemenu li{
+    padding-right:100px;
     text-transform:uppercase;
+}
+
+#largemenu li a{
+color:white;
+text-transform: uppercase;
+text-decoration: none;
+background: #5a72dd;
+border: 4px solid #dd5a72;
+display: inline-block;
+transition: all 0.4s ease 0s;
+padding:5px 7px;
+border-radius:5px;
+}
+
+#largemenu li a:hover{
+color:white;
+background: #dd5a72;
+transition: all 0.4s ease 0s;
 }
 
 
@@ -415,11 +443,13 @@ nav{
         font-weight: bolder;
         margin: 0;
         display: block;
+        text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
     }
     .titre h2{
         font-weight: bold;
         display: block;
         margin-bottom:20px;
+        text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
     }
     .titre a{        
         background-color: #dd5a72;
