--- a/css/styles.css
+++ b/css/styles.css
@@ -288,8 +288,23 @@ transition: all 0.4s ease 0s;
     flex-direction:column;
 }
 #formulaire > h2{
-    margin-bottom:20px;
+    margin-bottom:10px;
     text-align:center;
+}
+
+#formulaire > h3{
+    margin:0;
+    display:flex;
+    flex-direction: row;
+    padding-bottom:10px;
+    justify-content: center;
+}
+#formulaire > h3 > i{
+    padding-right:5px;
+}
+#formulaire > h3 > p{
+    font-size:0.6rem;
+    font-weight:normal;
 }
 #formulaire input, #formulaire textarea,#formulaire button{
     display: block;
@@ -400,6 +415,11 @@ nav{
     .form{
         width:70%;
         align-self:center;
+    }
+    #formulaire > h3 > p{
+        font-size:1rem;
+        font-weight:normal;
+        margin:0;
     }
     
 }
