--- a/css/styles.css
+++ b/css/styles.css
@@ -44,28 +44,10 @@ a:hover, a:active { text-decoration: none; color:black }
     background-color:rgba(161, 173, 235, 0.8);
     padding:10px;
     border-radius:0.10rem;
-
 }
 #menu ul li{
     padding-right:20px;
 }
-
-#menularge{
-    display : flex;
-    flex-direction: row;
-    list-style-type : none;
-    justify-content: space-evenly;
-    padding : 1% 0;
-    border-top : solid 1px white;
-    text-transform : uppercase;
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-
-#menularge a:hover{
-    color:#dd5a72;
-}
-
 
 
 
@@ -147,6 +129,44 @@ nav h1{
     padding :1%;
     font-size:0.8rem;
 }
+#largemenu{
+    display:flex;
+    flex-direction:row;
+    list-style:none;
+    justify-content:center;
+    margin:0;
+    padding-top:1%;
+    padding-bottom:1%;
+    font-size:1rem;
+    position:absolute;
+    top:7%;
+    left:50%;
+    transform: translate(-50%,50%);
+    z-index:100;
+}
+#largemenu li{
+    padding-right:100px;
+    text-transform:uppercase;
+}
+
+#largemenu li a{
+color:white;
+text-transform: uppercase;
+text-decoration: none;
+background: #5a72dd;
+border: 4px solid #dd5a72;
+display: inline-block;
+transition: all 0.4s ease 0s;
+padding:5px 7px;
+border-radius:5px;
+}
+
+#largemenu li a:hover{
+color:white;
+background: #dd5a72;
+transition: all 0.4s ease 0s;
+}
+
 
 /* !!!!!!!!!!!!! MAIN !!!!!!!!!!!! */
 /* SECTION 1 */
@@ -337,7 +357,9 @@ footer p{
     background-color:#dd5a72;
     border-radius:10px;
 }
-
+#largemenu{
+    display:none;
+}
 /* !!!!!!!!!!!!! MEDIA QUERIES !!!!!!!!!!!! */
 /* VUE TABLETTE */
 @media screen and (min-width: 700px){
@@ -442,16 +464,13 @@ footer p{
         text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
     }
     .titre a{        
-        background-color: #5a72dd;
+        background-color: #dd5a72;
         color: white;
         text-decoration: none;
         padding:10px;
         font-weight: bold;
         display: inline;
-    }
-    .titre a:hover{
-        background-color: #dd5a72;
-    }
+    }      
     #section1, #section2, #evolution, #formulaire, #exemple{
         padding: 20px 5vw;
     } 
