--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ a:hover, a:active { text-decoration: none; color:black }
     color:#FFFFFF;
     transition: all 0.2s;
     align-self:end;
-    
+
 }
 
 
@@ -120,6 +120,9 @@ header img{
 .fa-chevron-right{
     right: 15px;
 }
+.fa-chevron-left:hover, .fa-chevron-right:hover{
+    color:#5a72dd;
+}
 
 /* NAV */
 nav{
@@ -127,46 +130,27 @@ nav{
 }
 nav h1{
     padding :1%;
-    font-size:0.8rem;
+    font-size:1.1rem;
 }
+
 #largemenu{
+    list-style-type: none;
     display:flex;
-    flex-direction:row;
-    list-style:none;
-    justify-content:center;
+    flex-direction: row;
+    justify-content: space-around;
     margin:0;
-    padding-top:1%;
-    padding-bottom:1%;
-    font-size:1rem;
-    position:absolute;
-    top:7%;
-    left:50%;
-    transform: translate(-50%,50%);
-    z-index:100;
-}
-#largemenu li{
-    padding-right:100px;
-    text-transform:uppercase;
+    padding: 1% 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size : 1.2rem;
+    border-top: solid 2px white;
+    border-bottom: solid 2px white;
+    display:none;
 }
 
-#largemenu li a{
-color:white;
-text-transform: uppercase;
-text-decoration: none;
-background: #5a72dd;
-border: 4px solid #dd5a72;
-display: inline-block;
-transition: all 0.4s ease 0s;
-padding:5px 7px;
-border-radius:5px;
+#largemenu a:hover{
+    color : #dd5a72;
 }
-
-#largemenu li a:hover{
-color:white;
-background: #dd5a72;
-transition: all 0.4s ease 0s;
-}
-
 
 /* !!!!!!!!!!!!! MAIN !!!!!!!!!!!! */
 /* SECTION 1 */
@@ -193,8 +177,6 @@ transition: all 0.4s ease 0s;
 #section1 div p span{
     font-weight:bold;
 }
-
-
 
 /* SECTION 2 */
 #responsive{
@@ -357,9 +339,7 @@ footer p{
     background-color:#dd5a72;
     border-radius:10px;
 }
-#largemenu{
-    display:none;
-}
+
 /* !!!!!!!!!!!!! MEDIA QUERIES !!!!!!!!!!!! */
 /* VUE TABLETTE */
 @media screen and (min-width: 700px){
@@ -381,7 +361,9 @@ footer p{
         font-size:1.5rem;
         padding: 20px;
     }
-
+    #largemenu{
+        display:flex;
+    }
 
         /* SECTION 4 */
     #description{
@@ -411,7 +393,7 @@ footer p{
     }    
     /* FORMULAIRE DE CONTACT */
     #formulaire input, #formulaire textarea, #formulaire button{
-        font-size:1.3rem;
+        font-size:1.2rem;
     }
     .form{
         width:70%;
@@ -428,24 +410,17 @@ footer p{
 
 /* VUE GRAND ÉCRAN */
 @media screen and (min-width: 1200px){
-    
-    
-
-    
-    
     nav{
         display:block;
     }
-
-
     /* HEADER */
     /* fixer la VH apporte que des problèmes */
     /* header{
         height: 100vh;
     } */
-    header img{
-        height: calc(100vh - 100px);
-    } 
+    /*header img{*/
+    /*    height: calc(100vh - 100px);*/
+    /*} */
     #menu{
         display:none !important;
     }
@@ -464,13 +439,17 @@ footer p{
         text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
     }
     .titre a{        
-        background-color: #dd5a72;
+        background-color: #5a72dd;
         color: white;
         text-decoration: none;
         padding:10px;
         font-weight: bold;
         display: inline;
-    }      
+    }
+    .titre a:hover{
+        background-color: #dd5a72;
+
+    }
     #section1, #section2, #evolution, #formulaire, #exemple{
         padding: 20px 5vw;
     } 
